--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 ParkourTrailer.mp4 filter=lfs diff=lfs merge=lfs -text
+videos/ParkourTrailer.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
